2002-08-18 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/s_check.c: Changed exit status again to be sane not stupid. :)

2002-08-16 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/s_check.c: Changed exit status to return negative numbers for
	warnings (if there are no errors) or zero for no problems.		

2002-07-27 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/s_check.c: Added code to check for zero slots number and
	pins within a slotdef

	* tests/zero*.sym: Added a couple of test symbols to test the
	above errors

	* tests/*.sym: Added a dummy footprint= attribute to all the files
	
2002-07-25 Ales Hvezda   <ahvezda@geda.seul.org>

	* tests/*.sym: Bunch of additional symbols to test various new
	problems and updates to existing test files

	* src/s_check.c: Finished conversion to use new *_messages lists

	* src/s_symcheck.c: Finished conversion to use new *_messages
	lists

	* src/parsecmd.c: Improved the verbose flag to be cumulative

	* src/s_check.c: Added the following tests:
	  checks for missing attributes
	     pinlabel
	     pintype
	     footprint
	     refdes
	  checks for multiple attributes
	     pinlabel
	     pintype
	     footprint
	     refdes
	  checks for obsolete or forbidden attributes
	     label
	     uref
	     name
	     type
	  zero pinseqs or pinnumbers are not allowed

	* include/struct.h: A few changes to track above tests

	* src/s_check.c: Improved some of the messages

	* src/s_check.c: Fixed quiet flag (-q) to be really quiet

2002-07-23 Ales Hvezda   <ahvezda@geda.seul.org>

	* include/struct.h: Added *_messages list items

	* include/struct.h: Slightly cleaned up / reorganized symcheck struct

	* src/s_symcheck.c: Added code to output the new *_message lists

	* src/s_check.c: Added/changed code to use the new *_message lists

	* src/s_check.c: Added more tests to catch duplicate pinnumber
	attributes

	* src/s_check.c: Added more tests to catch invalid slotdef attributes

	* tests/: Added a few more *.sym files to validate checks
