@@ -17,7 +17,13 @@ list of checks performed on the symbols listed here.
 Quiet mode on.  This mode turns off all warnings/notes/messages. (optional)
 .TP 8
 .B -v 
-Verbose mode on.  This mode gives as much feedback to the user as possible. (optional)
+Verbose mode 1.  This mode will show all error messages (optional)
+.TP 8
+.B -vv 
+Verbose mode 2.  This mode will show all error and warning messages (optional)
+.TP 8
+.B -vvv 
+Verbose mode 2.  This mode will show all error, warning, and info messages (optional)
 .TP 8
 .B -h 
 Usage summary / gsymcheck help
@@ -42,7 +48,7 @@ Ales V. Hvezda and many others
 .BR gnetlist (1),
 .BR gsymcheck (1)
 .SH COPYRIGHT
-Copyright \(co  1999 Ales V Hvezda
+Copyright \(co  1999-2002 Ales V Hvezda
 
 This document can be freely redistributed according to the terms of the 
 GNU General Public License version 2.0
